# spam-filter-bot

./: CHANGELOG.md  LICENSE  README.md  package.yaml  spam-filter-bot.cabal  spam-filter.cabal
app/: Main.hs
data/: sample.csv
src/: Classifier.hs  Entry.hs  Lib.hs  Main.hs  SpamBot.hs
