cabal-version:       2.2

name:                spam-filter
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/spam-filter#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Anvar Sheryatullayev
maintainer:          alvaro.sh03@gmail.com
copyright:           2024 Anvar Sheryatullayev
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
library
  hs-source-dirs: src
  exposed-modules: Entry, Classifier, Lib
  build-depends: base >= 4.7 && < 5
               , transformers
               , containers
               , text
               , bytestring
               , vector
               , cassava
  default-language: Haskell2010

executable spam-filter
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , transformers
                     , containers
                     , text
                     , bytestring
                     , vector
                     , cassava
                     , spam-filter
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
